Use Entity Framework to back post data service. Make PostsController routes and PostService methods async.

--- a/Tweetbook/appsettings.json
+++ b/Tweetbook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Tweetbook-333E6738-70AE-466E-B2BD-A70BF88D2BF3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tweetbook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
