Set up JWT authentication

--- a/Tweetbook/appsettings.json
+++ b/Tweetbook/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tweetbook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "JwtSettings": {
+    "Secret": "IBHCDpZA8Lc3RZHIZyVHWT4m675r0zjh"
+  },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "My API",
