Implement refresh tokens

--- a/Tweetbook/appsettings.json
+++ b/Tweetbook/appsettings.json
@@ -3,7 +3,8 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tweetbook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "Secret": "IBHCDpZA8Lc3RZHIZyVHWT4m675r0zjh"
+    "Secret": "IBHCDpZA8Lc3RZHIZyVHWT4m675r0zjh",
+    "TokenLifetime": "00:00:45"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
